getting there maybe

--- a/rochambeau.html
+++ b/rochambeau.html
@@ -42,6 +42,21 @@
                         <td id="ties">0</td>
                     </tr>
                 </table>
+                Matches Scoreboard:
+                <div id="Matchboard">
+                <table class="table">
+                    <tr>
+                        <td>Wins:</td>
+                        <td>Losses:</td>
+                        <td>Ties:</td>
+                    </tr>
+                    <tr>
+                        <td id="win">0</td>s
+                        <td id="lose">0</td>
+                        <td id="tie">0</td>
+                    </tr>
+                </table>
+            </div>
             </div>
         </div>
     </body>
